--- a/Modulo02 HTML & CSS/Modulo01 HTML e CSS/CodePark01 ExemplosTagsHTML/index.html
+++ b/Modulo02 HTML & CSS/Modulo01 HTML e CSS/CodePark01 ExemplosTagsHTML/index.html
@@ -67,6 +67,7 @@
 <!--Criando Links-->
 <div>
   <footer>
+    <h3>Criando Links</h3>
     <table>
       <td><a href="primriroLink">Esse é meu Primeiro Link</a></td>
       <td><a href="segundoLink">Esse é meu Segundo Link</a></td>
