Correcao da tabela

--- a/Modulo02 HTML & CSS/Modulo01 HTML e CSS/CodePark01 ExemplosTagsHTML/index.html
+++ b/Modulo02 HTML & CSS/Modulo01 HTML e CSS/CodePark01 ExemplosTagsHTML/index.html
@@ -33,10 +33,9 @@
   <h2>Criando Tabela com Imagens</h2>
 <table class="tabela">
   <tr>
-    Imagem HTML
-  </tr>
-  <tr>
-    Imagem CSS
+    <td> Imagem HTML </td>
+ 
+    <td> Imagem CSS </td>
   </tr>
   <td><img src="/imagens/htmlimag.jpeg" height="100px" width="100px"></td>
   <td><img src="/imagens/cssimg.png" height="100px" width="100px"></td>
