Inclindo meus passeios

--- a/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/faleconosco.html
+++ b/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/faleconosco.html
@@ -19,13 +19,12 @@
             <nav>
                 <ul>
                   <li id="home"><a href="/index.html">Home</a></li>
+                  <li id="Passeios"><a href="passeios.html">Meus Passeios</a></li>
                   <li id="faleconosco"><a href="faleconosco.html">Fale Conosco</a></li>
                   
                 </ul>
             </nav>
-            <!--<a href="">
-                <h3 class="conta">Contatos</h3>
-            </a>-->
+           
         </section>
     </header>
     <div class="box-formulario">        
