--- a/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/index.html
+++ b/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/index.html
@@ -20,7 +20,8 @@
             <h2>Recifetur</h2>
             <nav>
                 <ul>
-                  <li id="home"><a href="">Home</a></li>
+                  <li id="home"><a href="/index.html">Home</a></li>
+                  <li id="Passeios"><a href="passeios.html">Meus Passeios</a></li>
                   <li id="falacosco"><a href="faleconosco.html">Fale Conosco</a></li>
                   
                 </ul>
