--- a/PortifolioResponsivo/CauladoraIMC/imc.html
+++ b/PortifolioResponsivo/CauladoraIMC/imc.html
@@ -21,7 +21,7 @@
           </label>
           <div class="input-field">
             <i class="fa-solid fa-weight-hanging"></i>
-            <input type="number" id="peso" >
+            <input type="text" id="peso" >
             <span>
               Kg
             </span>
@@ -32,7 +32,7 @@
           </label>
           <div class="input-field">
             <i class="fa-solid fa-ruler"></i>
-            <input type="number" id="altura" >
+            <input type="text" id="altura" >
             <span>
               m
             </span>
