--- a/PortifolioResponsivo/index.html
+++ b/PortifolioResponsivo/index.html
@@ -39,6 +39,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md">
+      <button class="btn" onclick="myFunction()"></button>
       <a class="navbar-brand" href="#" style="color: white">Fabricio Santos</a>
       <button
         class="navbar-toggler"
@@ -275,5 +276,6 @@
     <footer class="text-center final">
       <p class="pfooter">Copyright 2023.  - Fabricio Santos®</p>
     </footer>
+    <script src="/index.js"></script>
   </body>
 </html>
